# badapplevita

./: CMakeLists.txt  README.md
src/: main.c  monorale.c  monorale.h  sound.c  sound.h
